@@ -1,3 +1,6 @@
+#
+# Dictionary Reader Makefile
+#
 
 include $(GNUSTEP_MAKEFILES)/common.make
 
@@ -16,7 +19,8 @@ endif
 
 APP_NAME = DictionaryReader
 
-DictionaryReader_OBJC_FILES = AppController.m \
+DictionaryReader_OBJC_FILES = \
+AppController.m \
 StreamLineWriter.m \
 StreamLineReader.m \
 DictConnection.m \
@@ -31,7 +35,8 @@ Preferences.m \
 main.m \
 
 
-DictionaryReader_HEADER_FILES = AppController.h \
+DictionaryReader_HEADER_FILES = \
+AppController.h \
 StreamLineWriter.h \
 StreamLineReader.h \
 DictConnection.h \
@@ -49,14 +54,16 @@ Preferences.h \
 
 DictionaryReader_OBJCC_FILES = 
 DictionaryReader_C_FILES = 
-DictionaryReader_RESOURCE_FILES = Resources/dict.png \
+DictionaryReader_RESOURCE_FILES = \
+Resources/dict.png \
 Resources/Dictionaries/jargon/jargon.index \
 Resources/Dictionaries/jargon/jargon.dict \
 
 
-DictionaryReader_LANGUAGES = English \
+DictionaryReader_LANGUAGES = English
 
-DictionaryReader_LOCALIZED_RESOURCE_FILES = DictionaryReader.gorm \
+DictionaryReader_LOCALIZED_RESOURCE_FILES = \
+DictionaryReader.gorm \
 Preferences.gorm \
 DictionaryReader.nib \
 Preferences.nib
@@ -66,11 +73,22 @@ DictionaryReader_MAIN_MODEL_FILE = DictionaryReader.gorm
 
 DictionaryReader_PRINCIPAL_CLASS = 
 
-ADDITIONAL_GUI_LIBS = -lEtoileFoundation
+# If we're compiling on Etoile, we'll link to EtoileFoundation
+# to not duplicate UKNibOwner in the code.
+ifeq ($(etoile), yes)
+	ADDITIONAL_GUI_LIBS += -lEtoileFoundation
+	ADDITIONAL_OBJC_FLAGS += -DETOILE
+else
+	DictionaryReader_OBJC_FILES += UKNibOwner.m
+	DictionaryReader_HEADER_FILES += UKNibOwner.h
+endif
 
 SUBPROJECTS = 
 -include GNUmakefile.preamble
 include $(GNUSTEP_MAKEFILES)/application.make
 include $(GNUSTEP_MAKEFILES)/aggregate.make
-include ../../../etoile.make
+-include ../../../etoile.make
 -include GNUmakefile.postamble
+
+
+
